- Switch from offline image preloading to online in background - Added new features to "Champion Suggestions" tab - Added GitHub Actions integration